config/samples/poc/rwx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-nfs-gateway-poc
  labels:
    storage.k8s-darwin.dev/poc: longhorn-nfs-gateway
